k8s/admin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
      - name: admin-server
        image: prasad890/spring-petclinic-admin-server
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
  namespace: petclinic
spec:
  selector:
    app: admin-server
  ports:
  - port: 9090
    targetPort: 9090
