k8s/customers-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
      - name: customers-service
        image: prasad890/spring-petclinic-customers-service
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  namespace: petclinic
spec:
  selector:
    app: customers-service
  ports:
  - port: 8081
    targetPort: 8081
