k8s/discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
      - name: discovery-server
        image: prasad890/spring-petclinic-discovery-server
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
        ports:
        - containerPort: 8761
        readinessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 40
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: petclinic
spec:
  selector:
    app: discovery-server
  ports:
  - port: 8761
    targetPort: 8761
