k8s/genai-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-service
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai-service
  template:
    metadata:
      labels:
        app: genai-service
    spec:
      containers:
      - name: genai-service
        image: prasad890/spring-petclinic-genai-service
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: genai-service
  namespace: petclinic
spec:
  selector:
    app: genai-service
  ports:
  - port: 8084
    targetPort: 8084
