k8s/tracing-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-server
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracing-server
  template:
    metadata:
      labels:
        app: tracing-server
    spec:
      containers:
      - name: tracing-server
        image: openzipkin/zipkin
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
        ports:
        - containerPort: 9411
     #   env:
     #   - name: JAVA_OPTS
     #     value: "-XX:UseSVE=0"
---
apiVersion: v1
kind: Service
metadata:
  name: tracing-server
  namespace: petclinic
spec:
  selector:
    app: tracing-server
  ports:
  - port: 9411
    targetPort: 9411
