k8s/vets-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
      - name: vets-service
        image: prasad890/spring-petclinic-vets-service
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
  namespace: petclinic
spec:
  selector:
    app: vets-service
  ports:
  - port: 8083
    targetPort: 8083
