k8s/visits-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
      - name: visits-service
        image: prasad890/spring-petclinic-visits-service
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: visits-service
  namespace: petclinic
spec:
  selector:
    app: visits-service
  ports:
  - port: 8082
    targetPort: 8082
